# bookstore_app

./: .gitignore  README.md  pyproject.toml  test_js.py
src/bookstore/: app.py  faker_test.py  mysql_db.py  mysql_test.ipynb
src/bookstore/scripts/js/: validation.js
src/bookstore/scripts/py/: role_required.py
src/bookstore/templates/: books.html  home.html  login.html  profile.html  register.html  users.html
